# spaces

./: Cargo.toml  SUBSPACES.md
borsh_utils/: Cargo.toml
borsh_utils/src/: lib.rs
client/: Cargo.toml
client/src/: app.rs  checker.rs  client.rs  config.rs  lib.rs  rpc.rs  spaces.rs  wallets.rs
client/src/store/: chain.rs  mod.rs  ptrs.rs  spaces.rs
client/tests/: integration_tests.rs  ptr_tests.rs
protocol/: Cargo.toml
protocol/src/: constants.rs  hasher.rs  lib.rs  prepare.rs  script.rs  slabel.rs  validate.rs
ptr/: Cargo.toml
ptr/src/: constants.rs  lib.rs  sptr.rs
testutil/: Cargo.toml
veritas/: Cargo.toml  README.md
veritas/src/: lib.rs  wasm.rs
wallet/: Cargo.toml
wallet/src/: builder.rs  lib.rs
