[package]
name = "spaces_protocol"
version = "0.0.7"
edition = "2021"

[dependencies]
bitcoin = { version = "0.32.2", features = ["base64", "serde"], default-features = false }
log = "0.4.14"

## optional features
borsh = { version = "1.5", default-features = false, features = ["derive"], optional = true }
borsh_utils = { path = "../borsh_utils", optional = true }
serde = { version = "^1.0", features = ["derive"], default-features = false, optional = true }

[dev-dependencies]
rand = "0.8.5"
serde_json = "1.0.132"

[features]
default = []
serde = ["dep:serde"]
borsh = ["dep:borsh", "dep:borsh_utils"]
std = ["serde", "borsh"]
