[package]
name = "spaces_ptr"
version = "0.1.0"
edition = "2024"

[dependencies]
bitcoin = { version = "0.32.2", features = ["base64", "serde"], default-features = false }
log = "0.4.14"
spaces_protocol = {path = "../protocol", default-features = false}

## optional features
borsh = { version = "1.5", default-features = false, features = ["derive"], optional = true }
borsh_utils = { path = "../borsh_utils", optional = true }
serde = { version = "^1.0", features = ["derive"], default-features = false, optional = true }
bech32 = { version = "0.11.0", optional = true }
hex = { version = "0.4", optional = true }

[dev-dependencies]
rand = "0.8.5"
serde_json = "1.0.132"

[features]
default = ["std"]
serde = ["dep:serde", "dep:hex", "spaces_protocol/serde"]
borsh = ["dep:borsh", "dep:borsh_utils", "spaces_protocol/borsh"]
bech32 = ["dep:bech32"]
std = ["serde", "borsh", "bech32"]

